Added the fundly logo in two formats to set

--- a/src/demo.html
+++ b/src/demo.html
@@ -9,7 +9,7 @@
 	<link rel="stylesheet" href="style.css"></head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> fundly-icons <small class="fgc1">(Glyphs:&nbsp;16)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> fundly-icons <small class="fgc1">(Glyphs:&nbsp;18)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: Unknown</h1>
@@ -106,7 +106,7 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-location"></span><span class="mls"> icon-location</span>
+				<span class="icon-logo-knockout"></span><span class="mls"> icon-logo-knockout</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e607" class="unit size1of2" />
@@ -119,7 +119,7 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-health"></span><span class="mls"> icon-health</span>
+				<span class="icon-logo-heart"></span><span class="mls"> icon-logo-heart</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e608" class="unit size1of2" />
@@ -132,7 +132,7 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-greek"></span><span class="mls"> icon-greek</span>
+				<span class="icon-location"></span><span class="mls"> icon-location</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e609" class="unit size1of2" />
@@ -145,7 +145,7 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-children"></span><span class="mls"> icon-children</span>
+				<span class="icon-health"></span><span class="mls"> icon-health</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e60a" class="unit size1of2" />
@@ -158,7 +158,7 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-education"></span><span class="mls"> icon-education</span>
+				<span class="icon-greek"></span><span class="mls"> icon-greek</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e60b" class="unit size1of2" />
@@ -171,7 +171,7 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-community"></span><span class="mls"> icon-community</span>
+				<span class="icon-education"></span><span class="mls"> icon-education</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e60c" class="unit size1of2" />
@@ -184,7 +184,7 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-church"></span><span class="mls"> icon-church</span>
+				<span class="icon-community"></span><span class="mls"> icon-community</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e60d" class="unit size1of2" />
@@ -197,7 +197,7 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-arts"></span><span class="mls"> icon-arts</span>
+				<span class="icon-church"></span><span class="mls"> icon-church</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e60e" class="unit size1of2" />
@@ -210,11 +210,37 @@
 		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
-				<span class="icon-animal"></span><span class="mls"> icon-animal</span>
+				<span class="icon-children"></span><span class="mls"> icon-children</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix">
 				<input type="text" readonly value="e60f" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe60f;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-arts"></span><span class="mls"> icon-arts</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e610" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe610;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix noLiga-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="icon-animal"></span><span class="mls"> icon-animal</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix">
+				<input type="text" readonly value="e611" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe611;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix noLiga-true">
 				<span class="unit pvs fgc1">liga: </span>
